appId: com.greenovate.nexus
---
- launchApp
- tapOn:
    id: "com.greenovate.nexus:id/environmentInput"
- eraseText
- inputText: "main"
- tapOn:
    id: "com.greenovate.nexus:id/apiBaseUrlInput"
- eraseText
- inputText: "http://localhost/mock"
- tapOn: "Validate Readiness"
- assertVisible: "Not ready"
- tapOn:
    id: "com.greenovate.nexus:id/environmentInput"
- eraseText
- inputText: "uat"
- tapOn:
    id: "com.greenovate.nexus:id/apiBaseUrlInput"
- eraseText
- inputText: "https://api.example.com"
- tapOn: "Validate Readiness"
- assertVisible: "Ready for deployment"
